--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,15 @@
     "semi": 1,
     "indent": ["warn", 2],
     "no-debugger": "warn"
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "./__tests__/giphy.test.js"
+      ],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
